重构生产代码，优化 getDependencies 的代码